--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -15,6 +15,7 @@
 * Bug fix: pyflakes analysis crashed if there was an invalid escape character
   or null characters in the file (Issue #399)
 * Bug fix: pylint fails to run on files in projects which have no import dirs
+* Updating pyflakes to 0.7.3
 
 2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
