--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-2013 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2013 Aug 12 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Better calltips for PyQt objects.
 * About dialog added.
@@ -11,6 +11,7 @@
 * Make Ctrl+PgUp going to the previous tab while Ctrl+PgDwn to the next one.
 * New feature: ui configurable monospaced font.
 * Fix: opening another user (read only) project now works.
+* New feature: plugin interface.
 * New feature: garbage collector plugin.
 * Bug fix: pyflakes analysis crashed if there was an invalid escape character
   or null characters in the buffer (Issue #399)
