Bug fix: core dump in case if a docstring is longer than 65535 bytes

--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -1,3 +1,7 @@
+XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: core dump in case if a docstring is longer than 65535 bytes.
+
 2013 Aug 29  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Prepared for release v.1.6.3
