--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,6 +4,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Improvement: scaling text editor fonts via Ctrl + Mouse wheel
 * Project tab is activated automatically when a project is loaded from the
   recent projects tab
+* Reset pyflakes labels when a file changed its type due to 'save as' action
 
 
 2013 Aug 23 Sergey Satskiy <sergey.satskiy@gmail.com>
