Better help widget

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -5,6 +5,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
   variable name is stripped.
 * Bug fix: proper signalling VCS status change in the project browser
 * Rectangular selection: Ctrl+mouse or Alt+Shift+cursor keys
+* Better help widget
 
 2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>
 
