--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -9,6 +9,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Better welcome widget
 * pylint 1.0.0 is now working
 * Fix: Ctrl++, Ctrl+- on numpad did not change the font size on all tabs.
+* Fix for FC19: diff viewer font was not monospaced
 
 2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>
 
