--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -11,6 +11,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Fix: Ctrl++, Ctrl+- on numpad did not change the font size on all tabs.
 * Fix for FC19: diff viewer font was not monospaced
 * Improvement: diff viewer font is scaled in sync with the main editor
+* Bug fix: VCS annotate in debug mode caused crash
 
 2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>
 
