Bug fix: svn delete dialog failed

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -14,6 +14,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Bug fix: VCS annotate in debug mode caused crash
 * Bug fix: newly opened files withing a debug session are editable
 * Removing zoom buttons from the text editor toolbar
+* Bug fix: SVN plugin delete warning dialog failed
 
 2013 Nov 16 Sergey Satskiy <sergey.satskiy@gmail.com>
 
