--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -2,6 +2,7 @@
 
 * Prepared for release v.1.6.5
 * Collect line and position of the ':' character for functions and classes.
+* Around 5% better performance
 
 2013 Nov 16  Sergey Satskiy <sergey.satskiy@gmail.com>
 
