--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: wrong brutal stop of a debug session on Fedora
+* Bug fix: side bars must not be expanded via clicking on desabled tabs
+
 2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.2.1
