--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -14,6 +14,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * Bug fix: SVN plugin log window - incorrect revision number based sorting
 * New feature: debug session button added to dump debug session settings
 * Replacing redo shortcut Ctrl+Shift+Z with Ctrl+Y
+* Bug fix: allow replacing with an empty string
 
 2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
