--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Version 2.2.2
 * Bug fix: wrong brutal stop of a debug session on Fedora
 * Bug fix: side bars must not be expanded via clicking on desabled tabs
 * Improvement: get rid of serialization/deserialization of the python files
