--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -3,6 +3,8 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * New feature: allow selecting multiple files in the 'Open file' dialog
 * New feature: display the number of highlighted occurences on the status bar
 * Bug fix: crash when 'Edit' main menu is opened on the startup screen
+* New feature: detect TAB TAB clicks after a character and add spaces if
+  there is no completion
 
 
 2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
