Installing custom garbage collector which works in the GUI thread

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -9,7 +9,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
   jumps to the certain column if so
 * Bug fix: opening recent project from the project main menu lead to crash if
   the project does not exist anymore
-
+* New feature: custom garbage collector which runs in the GUI thread
 
 2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
 
