--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2014 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* New feature: navigation bar
+* Bug fix: mouse click in the editor led to a sporadic crash
+
 2014 Mar 11 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.3.0
