--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -2,6 +2,8 @@
 
 * New feature: navigation bar
 * Bug fix: mouse click in the editor led to a sporadic crash
+* New feature: implementation of a context menu for the redirected IO console
+  including copying everything with timestamps
 
 2014 Mar 11 Sergey Satskiy <sergey.satskiy@gmail.com>
 
