--- a/flowparser/ChangeLog
+++ b/flowparser/ChangeLog
@@ -1,4 +1,4 @@
-2012 Dec 28  Sergey Satskiy <sergey.satskiy@gmail.com>
+2014 May 14  Sergey Satskiy <sergey.satskiy@gmail.com>
 
-* Development started
+* Development started using the pycxx library
 
