--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: exception is case when files in a project directory are created
+  and deleted very quickly
+
 2014 May 06 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 2.3.1
