--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -6,6 +6,7 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * GC plugin: mimic standard GC procedure
 * Fix: 'remove all ignored exception types' did not clear the list in memory
 * New feature: saving profiling results table in a CSV file
+* F12: make the cursor line the first on the screen
 
 2014 May 06 Sergey Satskiy <sergey.satskiy@gmail.com>
 
