Update the web site link

--- a/src/README
+++ b/src/README
@@ -1,8 +1,7 @@
 CODIMENSION
 
 codimension is a graphics python two-way code editor and analyzer.
-See details at: http://satsky.spb.ru/codimension/codimensionEng.php
-                http://codimension.googlecode.com
+See details at: http://codimension.org
 
 
 REQUIREMENTS
