--- a/src/plugins/README
+++ b/src/plugins/README
@@ -28,7 +28,7 @@ Module = .
 [Documentation]
 Author = Sergey Satskiy <sergey.satskiy@gmail.com>
 Version = 1.0.0
-Website = http://satsky.spb.ru/codimension
+Website = http://codimension.org
 Description = Codimension subversion plugin
 
 The plugin directory must be a python package i.e. it must have __init__.py file.
