--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2016 Sep 14 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 3.0.1
+* Fixes packaging for Fedora and Centos
+
 2016 Sep 05 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 3.0.0
