--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2016 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 3.0.2
+* Getting rid of QWebKit dependency. It is not found in newer Ubuntu releases
+
 2016 Sep 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 3.0.1
