--- a/src/AUTHORS
+++ b/src/AUTHORS
@@ -1,7 +1,8 @@
 Sergey Satskiy <sergey.satskiy@gmail.com>
 
-Notice: the codimension project is heavily influented by eric4 -
+Notice: the Codimension project is heavily influented by eric4 -
         Eric Integrated Development Environment. Many ideas and
-        many code were taken from eric4 and adopted for codimension.
+        many code were taken from eric4 and adopted for Codimension.
         Credits to Detlev Offenbach, author of eric4
+
 
