--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version X.X.X
+* Cosmetic changes (pep8 compatibility)
+* New flow setting to enable CML indicators on the diagram (default: False)
+* Better icon for the 'build imports diagram' buttons/menu items
+
 2017 Nov 19 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.0.2
