--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017 Dec 3 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Verion 4.0.4
+* Better approach to setup.py (on some systems it did not work as expected)
+
 2017 Nov 30 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.0.3
