--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017 xxx xx Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 4.0.5
+* Proportional change of spacings when a mono font changed for the flow UI
+* New feature: show/hide comments/docstrings/except blocks on the flowUI
+* More flexible pyflakes suppression line
+
 2017 Dec 3 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Verion 4.0.4
