--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2018 Apr 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.2.0
 * Text-to-graphics group support: empty/collapsed/expanded groups.
