--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018 May 11 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 4.2.1
+* Bug fix: incorrect recent files loading (regression)
+* New feature: grouping items on the graphics pane
+
 2018 Apr 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.2.0
