--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018 May 25 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 4.2.3
+* Bug fix: IDE does not start after installation (second try)
+
 2018 May 17 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.2.2
