Updating with the recent changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018 Aug 01 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 4.2.*
+* Fix: default application CSS adjustments
+
 2018 May 25 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.2.3
