--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version X.X.X
+* Bump jedi version to 0.12.1
+
 2018 Aug 13 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.2.4
