--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version 4.3.1
+* Bug fix: crash when a try else block is in an if branch and a mouse hovers it
+* Downgrading pyflakes requirement to 1.6.0 due to an implicit dependency via
+  radon->flake8_polyfill->flake8->pyflakes
+
 2018 Sep 26 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.3.0
