--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 * Bug fix: proper file position is saved when an individual tab is closed
 * Improved file type detection for some file types
 * Bug fix: incorrect inital margin size when a new tab button is clicked
+* Bumping up the jedi library version to 0.13.1
 
 2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>
 
