--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 * Improved file type detection for some file types
 * Bug fix: incorrect inital margin size when a new tab button is clicked
 * Bumping up the jedi library version to 0.13.1
+* Bumping up the radon library version to 2.4.0
+* Fixing the flake8 version to 3.6.0
 
 2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>
 
