--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Version X.X.X
+* New feature: support a floating independent window with flowchart renderer
+* More on embedded documentation
+
 2019 Mar 21 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.4.0
