--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
-2019 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2019 Apr 25 Sergey Satskiy <sergey.satskiy@gmail.com>
 
-* Version X.X.X
+* Version 4.5.0
+* Python 3.7 support
 * New feature: support a floating independent window with flowchart renderer
 * More on embedded documentation
+* Bumping up the cdmcfparser version to 2.2.0
+* Bumping up the cdmpyparser version to 3.1.0
 
 2019 Mar 21 Sergey Satskiy <sergey.satskiy@gmail.com>
 
