A few bits to support CML doc comments

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019 XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version X.X.X
+* PlantUML diagram support for markdown
+
 2019 Apr 25 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Version 4.5.0
