--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2019 XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>
 
-* Version X.X.X
+* Version 4.5.1
 * PlantUML diagram support for markdown
 * Self protection against invalid custom terminal command line
 * Bumping up the cdmcfparser version to 2.2.1
