--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>
 
+* Version x.x.x
+* Bug fix: Exception when switching smart zoom level
+
+2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>
+
 * Version 4.5.1
 * PlantUML diagram support for markdown
 * Self protection against invalid custom terminal command line
