--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>
+2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>
 
-* Version x.x.x
+* Version 4.5.2
 * Bug fix: Exception when switching smart zoom level
 
 2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>
