--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Bug fix: exception when selecting doc links
 * CML doc support
 * Embedded documentation significant update
+* Bumping up the jedi library version to 0.15.1
 
 2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>
 
