--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 * CML doc support
 * Embedded documentation significant update
 * Bumping up the jedi library version to 0.15.1
+* Bumping up the plantUML binary version to 1.2019.11
 
 2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>
 
