Disconnect signals on closing editor tabs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version X.X.X
+* Updated procedure of resolving imports
+
+
 2020 Jan 01 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.7.0
