--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,14 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version X.X.X
 * Updated procedure of resolving imports
-
+* Better memory management
+* Bumping up the jedi library version to 0.16.0
+* Bumping up the vulture library version to 1.3
+* Bumping up the radon library version to 4.1.0
+* Bumping up the pygments library version to 2.6.1
+* Bumping up the qutepart editor version to 3.3.0.post1
+* Adding the system info plugin
+* Preparing for a new dark color skin
 
 2020 Jan 01 Sergey Satskiy <sergey.satskiy@tuta.io>
 
