Update the release date

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+2020 Mar 25 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.7.1
 * Updated procedure of resolving imports
