--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2020 Apr 25 Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version 4.8.1
+* Bumping up the jedi library version to 0.17.0
+* Jedi project is now used for all the library calls
+* New search facilities: results history, deleting individual
+  matches/files/results, do again search, display search parameters and
+  timestamps
+* Calltip adjustments for the new jedi interface
+
 2020 Apr 09 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.8.0
