--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2020 XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version 4.9.0
+* Fixed installation package
+* New graphics
+* Bug fixes on the graphics pane (selection, rubber band)
+
 2020 Apr 25 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.8.1
