Fix: broken disassembling for 3.7/3.8 (new metadata field was added in .pyc)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2020 XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version 4.9.1
+* Bug fix: broken disassembling for python 3.7/3.8 - a new field was added to
+  metadata header in .pyc files
+
 2020 Aug 03 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.9.0
